[package]
name = "pid-allocator"
description = "A simple PID allocator for no_std environment"
version = "0.1.4"
edition = "2021"
authors = ["Kiritan <kiritantakechi@gmail.com>"]
keywords = ["allocator", "pid"]
categories = ["no-std"]
readme = "README.md"
repository = "https://github.com/KiritanTakechi/pid-allocator"
license = "MIT"

[profile.release]
opt-level = 3
lto = true

[dependencies]
spin = "0.9.8"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "allocator_benchmark"
harness = false