[package]
name = "pid-allocator"
description = "A simple PID allocator for no_std environment"
version = "0.1.6"
edition = "2024"
authors = ["Kiritan <kiritantakechi@gmail.com>"]
keywords = ["allocator", "pid", "no_std"]
categories = ["no-std"]
readme = "README.md"
documentation = "https://docs.rs/pid-allocator"
homepage = "https://github.com/KiritanTakechi/pid-allocator"
repository = "https://github.com/KiritanTakechi/pid-allocator"
license = "MIT"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[dependencies]
spin = "^0.10.0"

[dev-dependencies]
criterion = "^0.6.0"

[[bench]]
name = "allocator_benchmark"
harness = false
